--- a/public/sass/pages/transfer.scss
+++ b/public/sass/pages/transfer.scss
@@ -102,6 +102,27 @@ padding: 1rem;
     .hotels{
         grid-template-columns:1fr;
     }
+    .header__content__heading{
+        letter-spacing: 0.5rem;
+        font-size: 2rem;
+        }
+        .header__content__heading2{
+            font-size: 1.5rem;
+        }
+    
+}
+
+@media (max-width: 400px){
+
+    .header__content__heading{
+        letter-spacing: 0.5rem;
+        font-size: 1.7rem;
+        letter-spacing: 0.3rem;
+        }
+        .header__content__heading2{
+            font-size: 1.3rem;
+        }
+    
 }
 
 ::-webkit-scrollbar{
